--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.12.1",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
-    "google-maps-api-loader": "^1.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vue2-google-maps": "^0.10.7"
+    "vue3-google-map": "^0.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
