--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.12.1",
-    "bootstrap": "^5.0.0-beta3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-axios": "^3.2.5",
     "vue-router": "^4.0.0-0",
-    "vue3-google-map": "^0.8.0"
+    "vue3-google-map": "^0.8.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
